Script update and UI

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -5,7 +5,7 @@
 
 body {
 	font-family: sans-serif;
-	background-color: #444444;
+	background-color: #111111;
 	color: #fff;
 }
 
@@ -14,14 +14,14 @@ body {
 	height: 800px;
 
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
 	text-align: center;
 
 	flex-direction: row;
 }
 
-.product__first, .cart {
+.product {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -32,9 +32,25 @@ body {
 	width: 400px;
 	height: 500px;
 
-	border-radius: 5px;
+	border-radius: 10px 0px 0 10px;
 
-	background-color: #555555;
+	background-color: #333333;
+}
+
+.cart {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+
+	flex-direction: column;
+
+	width: 400px;
+	height: 500px;
+
+	border-radius: 0px 10px 10px 0;
+
+	background-color: #222222;
 }
 
 .product__buy {
@@ -59,34 +75,6 @@ body {
 	flex-direction: row;
 }
 
-.produuct {
-	width: 350px;
-	display: flex;
-	flex-direction: row;
-}
-
-#cartName {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	height: 30px;
-	width: 300px;
-	background-color: #333333;
-	border-radius: 10px;
-}
-
-#priceName {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	height: 30px;
-	width: 50px;
-	background-color: #333333;
-	border-radius: 10px;
-}
-
 button {
 	color: white;
 	border: none;
@@ -98,6 +86,9 @@ button {
 img {
 	width: 174.5px;
 	height: 280.5px;
+
+	border-radius: 10px;
+	border: solid 5px #282828;
 }
 
 footer {
@@ -107,4 +98,15 @@ footer {
 	text-align: center;
 
 	flex-direction: column;
+}
+
+.cart div {
+	width: 350px;
+	height: 50px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-direction: row;
+	background-color: #333333;
+	border-radius: 10px;
 }
